concord_examples/tests/ui/missing_placeholder_type.stderr
error: expected `:`
 --> tests/ui/missing_placeholder_type.rs:9:15
  |
9 |     GET One(id)
  |               ^
